--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
 	"dependencies": {
 		"@hapi/joi": "^17.1.1",
 		"bcryptjs": "^2.4.3",
+		"cookie-parser": "^1.4.5",
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
+		"jsonwebtoken": "^8.5.1",
 		"nodemon": "^2.0.2",
 		"pg": "^7.18.2",
 		"prettier": "^1.19.1",
